--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
     height: 100%;
 }
 
@@ -7,23 +8,38 @@ body, html {
 }
 
 .bmd-layout-canvas {
-  flex-grow: 1;
+    flex-grow: 1;
 }
 
 body * {
-    font-family:'Arial'!important;
-    }
-
-body i,span {
-    font-family:'FontAwesome'!important;
+    font-family: 'Arial'!important;
 }
 
-.main-content{
-    padding-top:20px;
+body i,
+span {
+    font-family: 'FontAwesome'!important;
+}
+
+.main-content {
+    padding-top: 20px;
     padding-bottom: 20px;
 }
 
-.btn-main-menu a{    
+.btn-main-menu a {
     text-align: left !important;
 }
 
+fieldset {
+    width: 100%;
+    border: 1px solid #ddd;
+    padding: 8px;
+    border-radius: 9px;
+    margin-bottom: 10px;
+}
+
+legend {
+    width: unset;
+    line-height: inherit;
+    color: #333;
+    border: 0;
+}
