Abrindo Conta de Mesas

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -37,6 +37,10 @@ fieldset {
     margin-bottom: 10px;
 }
 
+a:hover{
+    text-decoration: none;
+}
+
 legend {
     width: unset;
     line-height: inherit;
