--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -38,12 +38,12 @@ fieldset {
 }
 
 #alert {
-    position: absolute;
-    top: 0px;
+    position: fixed;
+    top: -1000px;
     right: 5%;
     margin-left: 5%;
-    opacity: 0;
-    z-index: 999;
+    opacity: 1;
+    z-index: 10;
 }
 
 a:hover {
