--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -60,3 +60,11 @@ legend {
     color: #333;
     border: 0;
 }
+
+.alerta-urgente {
+    background-color: rgba(255, 0, 0, 0.2) !important;
+}
+
+.alerta-aviso {
+    background-color: rgba(255, 255, 0, 0.2) !important;
+}
